--- a/simulador.ipynb
+++ b/simulador.ipynb
@@ -11,7 +11,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-8290c0a87f0c>:39: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "  if pos != []:\n",
+      "<ipython-input-1-8290c0a87f0c>:98: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "  if pos != []:\n"
+     ]
+    }
+   ],
    "source": [
     "from OpenGL.GL import *\n",
     "from OpenGL.GLU import *\n",
@@ -30,16 +41,14 @@
     "ymin=-float(height/2)\n",
     "ymax=float(height/2)\n",
     "\n",
-    "pulsado = False\n",
-    "\n",
     "radius = 30.0 #pix\n",
     "\n",
     "v_coef = 30\n",
     "\n",
     "g = np.array([0.0,-0.6])\n",
-    "v = np.array([(r.random()*v_coef)-v_coef/2,\n",
-    "              (r.random()*v_coef/2)])\n",
-    "pos = np.array([0.0,0.0])\n",
+    "v = np.array([(r.random()*v_coef)*(1-1/2),\n",
+    "              (r.random()*(v_coef/2))])\n",
+    "pos = []\n",
     "\n",
     "VEL_MAX = 30\n",
     "\n",
@@ -51,21 +60,23 @@
     "\n",
     "\n",
     "def actualizar():\n",
-    "    t.sleep(0.009)\n",
     "    global v,g,pos\n",
-    "    new_v = np.add(v,g) #actualiza velocidad\n",
     "    \n",
-    "    if not mayor_que_vel_limite(new_v): #limitamos la velocidad\n",
-    "        v = new_v    \n",
-    "            \n",
-    "    new_pos = np.add(pos,v)\n",
-    "    \n",
-    "    pos = out_screen(new_pos)\n",
-    "    \n",
-    "    #print(pos)\n",
-    "    \n",
-    "    glutPostRedisplay()\n",
-    "    \n",
+    "    if pos != []:\n",
+    "        t.sleep(0.009)\n",
+    "        new_v = np.add(v,g) #actualiza velocidad\n",
+    "\n",
+    "        if not mayor_que_vel_limite(new_v): #limitamos la velocidad\n",
+    "            v = new_v    \n",
+    "\n",
+    "        new_pos = np.add(pos,v)\n",
+    "\n",
+    "        pos = out_screen(new_pos)\n",
+    "\n",
+    "        #print(pos)\n",
+    "\n",
+    "        glutPostRedisplay()\n",
+    "\n",
     "    \n",
     "# Process new_pos and checks is on screen\n",
     "def out_screen(new_pos):\n",
@@ -94,24 +105,37 @@
     "def mayor_que_vel_limite(v):\n",
     "    return (np.sqrt(np.power(v[0],2) + np.power(v[1],2))) > VEL_MAX\n",
     "        \n",
+    "def mouse(button, state, x, y):\n",
+    "    global pos\n",
     "    \n",
+    "    realPosMousex = ((xmax-xmin)/width*x+xmin)\n",
+    "    realPosMousey = ((ymin-ymax)/height*y+ymax)\n",
+    "    \n",
+    "    if button == GLUT_LEFT_BUTTON and state==GLUT_DOWN:\n",
+    "        pos = np.array([realPosMousex,realPosMousey])\n",
+    "\n",
+    "    if button == GLUT_RIGHT_BUTTON and state==GLUT_DOWN:\n",
+    "        pos = []\n",
+    "\n",
     "def dibujar_circulo():\n",
+    "    \n",
     "    glClearColor(0.0, 0.0, 0.0,1.0);\n",
     "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);\n",
+    "    if pos != []:\n",
     "\n",
-    "    glBegin(GL_TRIANGLE_FAN);\n",
+    "        glBegin(GL_TRIANGLE_FAN);\n",
     "\n",
-    "    glColor3f(1,1,1);\n",
+    "        glColor3f(1,1,1);\n",
     "\n",
-    "    glVertex2fv(pos);\n",
+    "        glVertex2fv(pos);\n",
     "\n",
-    "    alfa = 0;\n",
-    "    for i in range(0,361):\n",
-    "        glVertex2f(pos[0] + radius * np.cos(alfa), pos[1] + radius * np.sin(alfa));\n",
-    "        alfa += np.pi / 180; # 1 point each degree (in radians)\n",
-    "    \n",
-    "    glEnd();\n",
-    "    \n",
+    "        alfa = 0;\n",
+    "        for i in range(0,361):\n",
+    "            glVertex2f(pos[0] + radius * np.cos(alfa), pos[1] + radius * np.sin(alfa));\n",
+    "            alfa += np.pi / 180; # 1 point each degree (in radians)\n",
+    "\n",
+    "        glEnd()\n",
+    "\n",
     "    glFlush()\n",
     "\n",
     "    \n",
@@ -127,7 +151,7 @@
     "init()\n",
     "\n",
     "glutDisplayFunc(dibujar_circulo)\n",
-    "#glutMotionFunc(mouse)\n",
+    "glutMouseFunc(mouse)\n",
     "glutIdleFunc(actualizar)\n",
     "#glutPassiveMotionFunc(cursor)\n",
     "glutMainLoop()"
