Refactor and multiple elements in screen

--- a/simulador.ipynb
+++ b/simulador.ipynb
@@ -11,18 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-1-8290c0a87f0c>:39: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-      "  if pos != []:\n",
-      "<ipython-input-1-8290c0a87f0c>:98: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-      "  if pos != []:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from OpenGL.GL import *\n",
     "from OpenGL.GLU import *\n",
@@ -32,7 +21,7 @@
     "import time as t\n",
     "import random as r\n",
     "\n",
-    "#Tamaño de la ventana\n",
+    "#Window size\n",
     "width = 800\n",
     "height = 800\n",
     "\n",
@@ -46,11 +35,57 @@
     "v_coef = 30\n",
     "\n",
     "g = np.array([0.0,-0.6])\n",
-    "v = np.array([(r.random()*v_coef)*(1-1/2),\n",
-    "              (r.random()*(v_coef/2))])\n",
-    "pos = []\n",
+    "objects = []\n",
     "\n",
-    "VEL_MAX = 30\n",
+    "VEL_MAX = 50\n",
+    "\n",
+    "class Object:\n",
+    "\n",
+    "    def __init__(self, x, y):\n",
+    "        self.velocity = np.array([0,0])\n",
+    "        self.position = np.array([x,y])\n",
+    "        \n",
+    "    def update_physics(self):\n",
+    "        new_v = np.add(self.velocity,g) #updates vel\n",
+    "        if not is_over_limit(new_v): #limit\n",
+    "                self.set_velocity(new_v)\n",
+    "                \n",
+    "        new_pos = np.add(self.position,self.velocity) #update pos\n",
+    "        self.set_position(new_pos)\n",
+    "        out_screen(self,new_pos)\n",
+    "\n",
+    "    def set_velocity(self,new_vel):\n",
+    "        self.velocity = new_vel\n",
+    "    \n",
+    "    def set_position(self,new_pos):\n",
+    "        self.position = new_pos\n",
+    "    \n",
+    "    def to_string(self):\n",
+    "        return f\"{self.position}-{self.velocity}\"\n",
+    "    \n",
+    "\n",
+    "def is_over_limit(v):\n",
+    "    return (np.sqrt(np.power(v[0],2) + np.power(v[1],2))) > VEL_MAX\n",
+    "            \n",
+    "# Process the new position on edges\n",
+    "def out_screen(object,new_pos):\n",
+    "    \n",
+    "    if new_pos[0] > (xmax - radius) or new_pos[0] < (xmin + radius):\n",
+    "        object.set_velocity(np.multiply(object.velocity,[-0.75,0.97]))\n",
+    "        if new_pos[0] > (xmax - radius): # DERECHA\n",
+    "            object.set_position(np.add(new_pos,[(xmax - radius)-new_pos[0],0])) \n",
+    "          \n",
+    "        if new_pos[0] < (xmin + radius): # IZQUIERDA\n",
+    "            object.set_position(np.add(new_pos,[(xmin + radius)-new_pos[0],0]))\n",
+    "        \n",
+    "    if new_pos[1] > (ymax - radius) or new_pos[1] < (ymin + radius):\n",
+    "        object.set_velocity(np.multiply(object.velocity,[0.97,-0.75]))\n",
+    "        \n",
+    "        #if new_pos[1] > (ymax - radius): # ARRIBA\n",
+    "         #  new_pos = np.add(new_pos,[0,(ymax-radius)-new_pos[1]])          \n",
+    "            \n",
+    "        if new_pos[1] < (ymin + radius): # ABAJO\n",
+    "            object.set_position(np.add(new_pos,[0,(ymin+radius)-new_pos[1]]))\n",
     "\n",
     "def init():\n",
     "    glClearColor(0.0, 0.0, 0.0, 0.0)\n",
@@ -59,83 +94,45 @@
     "    glMatrixMode(GL_MODELVIEW)\n",
     "\n",
     "\n",
-    "def actualizar():\n",
-    "    global v,g,pos\n",
+    "# updates all velocities and positions\n",
+    "def update():\n",
+    "    global objects\n",
     "    \n",
-    "    if pos != []:\n",
-    "        t.sleep(0.009)\n",
-    "        new_v = np.add(v,g) #actualiza velocidad\n",
-    "\n",
-    "        if not mayor_que_vel_limite(new_v): #limitamos la velocidad\n",
-    "            v = new_v    \n",
-    "\n",
-    "        new_pos = np.add(pos,v)\n",
-    "\n",
-    "        pos = out_screen(new_pos)\n",
-    "\n",
-    "        #print(pos)\n",
-    "\n",
-    "        glutPostRedisplay()\n",
-    "\n",
+    "    #print(objects)\n",
     "    \n",
-    "# Process new_pos and checks is on screen\n",
-    "def out_screen(new_pos):\n",
-    "    global v\n",
-    "    if new_pos[0] > (xmax - radius) or new_pos[0] < (xmin + radius):\n",
-    "        v = np.multiply(v,[-0.75,0.97])\n",
-    "        \n",
-    "        if new_pos[0] > (xmax - radius): # DERECHA\n",
-    "            new_pos = np.add(new_pos,[(xmax - radius)-new_pos[0],0])\n",
-    "          \n",
-    "        if new_pos[0] < (xmin + radius): # IZQUIERDA\n",
-    "            new_pos = np.add(new_pos,[(xmin + radius)-new_pos[0],0])\n",
-    "        \n",
-    "    if new_pos[1] > (ymax - radius) or new_pos[1] < (ymin + radius):\n",
-    "        v = np.multiply(v,[0.97,-0.75])\n",
-    "        \n",
-    "        #if new_pos[1] > (ymax - radius): # ARRIBA\n",
-    "         #  new_pos = np.add(new_pos,[0,(ymax-radius)-new_pos[1]])          \n",
-    "            \n",
-    "        if new_pos[1] < (ymin + radius): # ABAJO\n",
-    "            new_pos = np.add(new_pos,[0,(ymin+radius)-new_pos[1]])\n",
-    "        \n",
-    "    return new_pos\n",
+    "    t.sleep(0.009) #adds some retard\n",
+    "\n",
+    "    for object in objects:\n",
+    "        object.update_physics()\n",
+    "    glutPostRedisplay()\n",
     "    \n",
-    "    \n",
-    "def mayor_que_vel_limite(v):\n",
-    "    return (np.sqrt(np.power(v[0],2) + np.power(v[1],2))) > VEL_MAX\n",
-    "        \n",
+    "# on left click, creates a ball. on right, deletes all\n",
     "def mouse(button, state, x, y):\n",
-    "    global pos\n",
+    "    global objects\n",
     "    \n",
-    "    realPosMousex = ((xmax-xmin)/width*x+xmin)\n",
+    "    realPosMousex = ((xmax-xmin)/width*x+xmin) #convert x,y from window to system x,y\n",
     "    realPosMousey = ((ymin-ymax)/height*y+ymax)\n",
     "    \n",
     "    if button == GLUT_LEFT_BUTTON and state==GLUT_DOWN:\n",
-    "        pos = np.array([realPosMousex,realPosMousey])\n",
+    "        objects.append(Object(realPosMousex,realPosMousey))\n",
     "\n",
     "    if button == GLUT_RIGHT_BUTTON and state==GLUT_DOWN:\n",
-    "        pos = []\n",
+    "        objects = []\n",
     "\n",
-    "def dibujar_circulo():\n",
+    "def draw():\n",
     "    \n",
     "    glClearColor(0.0, 0.0, 0.0,1.0);\n",
     "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);\n",
-    "    if pos != []:\n",
-    "\n",
+    "        \n",
+    "    for obj in objects: #draws all circles\n",
     "        glBegin(GL_TRIANGLE_FAN);\n",
-    "\n",
     "        glColor3f(1,1,1);\n",
-    "\n",
-    "        glVertex2fv(pos);\n",
-    "\n",
+    "        glVertex2fv(obj.position);\n",
     "        alfa = 0;\n",
     "        for i in range(0,361):\n",
-    "            glVertex2f(pos[0] + radius * np.cos(alfa), pos[1] + radius * np.sin(alfa));\n",
+    "            glVertex2f(obj.position[0] + radius * np.cos(alfa), obj.position[1] + radius * np.sin(alfa));\n",
     "            alfa += np.pi / 180; # 1 point each degree (in radians)\n",
-    "\n",
     "        glEnd()\n",
-    "\n",
     "    glFlush()\n",
     "\n",
     "    \n",
@@ -150,9 +147,9 @@
     "\n",
     "init()\n",
     "\n",
-    "glutDisplayFunc(dibujar_circulo)\n",
+    "glutDisplayFunc(draw)\n",
     "glutMouseFunc(mouse)\n",
-    "glutIdleFunc(actualizar)\n",
+    "glutIdleFunc(update)\n",
     "#glutPassiveMotionFunc(cursor)\n",
     "glutMainLoop()"
    ]
