--- a/simulador.ipynb
+++ b/simulador.ipynb
@@ -19,7 +19,6 @@
     "import sys\n",
     "import numpy as np\n",
     "import time as t\n",
-    "import random as r\n",
     "\n",
     "#Window size\n",
     "width = 800\n",
@@ -30,9 +29,7 @@
     "ymin=-float(height/2)\n",
     "ymax=float(height/2)\n",
     "\n",
-    "radius = 30.0 #pix\n",
-    "\n",
-    "v_coef = 30\n",
+    "radius = 25.0 #pix\n",
     "\n",
     "g = np.array([0.0,-0.6])\n",
     "objects = []\n",
@@ -44,15 +41,22 @@
     "    def __init__(self, x, y):\n",
     "        self.velocity = np.array([0,0])\n",
     "        self.position = np.array([x,y])\n",
+    "        self.vertex = get_circle_points(self,x,y)\n",
     "        \n",
     "    def update_physics(self):\n",
     "        new_v = np.add(self.velocity,g) #updates vel\n",
     "        if not is_over_limit(new_v): #limit\n",
     "                self.set_velocity(new_v)\n",
-    "                \n",
+    "        \n",
+    "        prev_pos = self.position\n",
     "        new_pos = np.add(self.position,self.velocity) #update pos\n",
     "        self.set_position(new_pos)\n",
     "        out_screen(self,new_pos)\n",
+    "        \n",
+    "        #update vertex\n",
+    "        for i in range(len(self.vertex)):\n",
+    "                self.vertex[i] =np.add(self.vertex[i],np.subtract(self.position,prev_pos))\n",
+    "            \n",
     "\n",
     "    def set_velocity(self,new_vel):\n",
     "        self.velocity = new_vel\n",
@@ -62,7 +66,17 @@
     "    \n",
     "    def to_string(self):\n",
     "        return f\"{self.position}-{self.velocity}\"\n",
+    "\n",
     "    \n",
+    "def get_circle_points(obj,x,y):\n",
+    "    points = []    \n",
+    "\n",
+    "    alfa = 0;\n",
+    "    for i in range(360):\n",
+    "        points.append([obj.position[0] + radius * np.cos(alfa), obj.position[1] + radius * np.sin(alfa)])    \n",
+    "        alfa += np.pi / 180.0; # 1 point each degree (in radians)\n",
+    "    return points\n",
+    "\n",
     "\n",
     "def is_over_limit(v):\n",
     "    return (np.sqrt(np.power(v[0],2) + np.power(v[1],2))) > VEL_MAX\n",
@@ -87,6 +101,12 @@
     "        if new_pos[1] < (ymin + radius): # ABAJO\n",
     "            object.set_position(np.add(new_pos,[0,(ymin+radius)-new_pos[1]]))\n",
     "\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "# OPENGL FUNC\n",
+    "\n",
     "def init():\n",
     "    glClearColor(0.0, 0.0, 0.0, 0.0)\n",
     "    glMatrixMode(GL_PROJECTION)\n",
@@ -98,15 +118,18 @@
     "def update():\n",
     "    global objects\n",
     "    \n",
-    "    #print(objects)\n",
-    "    \n",
     "    t.sleep(0.009) #adds some retard\n",
     "\n",
     "    for object in objects:\n",
     "        object.update_physics()\n",
     "    glutPostRedisplay()\n",
     "    \n",
-    "# on left click, creates a ball. on right, deletes all\n",
+    "    # print(\"UPDATE\")\n",
+    "    # for o in objects:\n",
+    "    # print(o.to_string())\n",
+    "    \n",
+    "    \n",
+    "# on left click creates a ball, on right one deletes all\n",
     "def mouse(button, state, x, y):\n",
     "    global objects\n",
     "    \n",
@@ -118,21 +141,22 @@
     "\n",
     "    if button == GLUT_RIGHT_BUTTON and state==GLUT_DOWN:\n",
     "        objects = []\n",
-    "\n",
+    "        \n",
     "def draw():\n",
     "    \n",
+    "    #cleans\n",
     "    glClearColor(0.0, 0.0, 0.0,1.0);\n",
     "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);\n",
+    "           \n",
     "        \n",
-    "    for obj in objects: #draws all circles\n",
-    "        glBegin(GL_TRIANGLE_FAN);\n",
-    "        glColor3f(1,1,1);\n",
-    "        glVertex2fv(obj.position);\n",
-    "        alfa = 0;\n",
-    "        for i in range(0,361):\n",
-    "            glVertex2f(obj.position[0] + radius * np.cos(alfa), obj.position[1] + radius * np.sin(alfa));\n",
-    "            alfa += np.pi / 180; # 1 point each degree (in radians)\n",
+    "    #draws all\n",
+    "    for obj in objects:\n",
+    "        glBegin(GL_TRIANGLE_FAN)\n",
+    "        glVertex2fv(obj.position)\n",
+    "        for i in range(len(obj.vertex)):\n",
+    "            glVertex2fv(obj.vertex[i])\n",
     "        glEnd()\n",
+    "        \n",
     "    glFlush()\n",
     "\n",
     "    \n",
@@ -153,13 +177,6 @@
     "#glutPassiveMotionFunc(cursor)\n",
     "glutMainLoop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
