--- a/simulador.ipynb
+++ b/simulador.ipynb
@@ -157,13 +157,13 @@
     "            glVertex2fv(obj.vertex[i])\n",
     "        glEnd()\n",
     "        \n",
-    "    glFlush()\n",
+    "    glutSwapBuffers()\n",
     "\n",
     "    \n",
     "    \n",
     "glutInit(sys.argv)\n",
     "\n",
-    "glutInitDisplayMode(GLUT_SINGLE | GLUT_RGB)\n",
+    "glutInitDisplayMode(GLUT_DOUBLE | GLUT_RGB)\n",
     "# Atributos de la ventana\n",
     "glutInitWindowPosition(950,200)\n",
     "glutInitWindowSize(width,height)\n",
