Added time system

--- a/simulador.ipynb
+++ b/simulador.ipynb
@@ -29,53 +29,53 @@
     "ymin=-float(height/2)\n",
     "ymax=float(height/2)\n",
     "\n",
-    "radius = 25.0 #pix\n",
-    "\n",
-    "g = np.array([0.0,-0.6])\n",
     "objects = []\n",
     "\n",
-    "VEL_MAX = 50\n",
+    "# PHYSICS CONSTANTS\n",
+    "radius = 20.0 #pix\n",
+    "g = np.array([0.0,-980])\n",
+    "BOUNCE_CONST = 0.7\n",
+    "SLIDE_CONST = 0.999\n",
+    "\n",
+    "VEL_MAX = 100000\n",
+    "\n",
+    "begin = t.time_ns()\n",
+    "\n",
     "\n",
     "class Object:\n",
     "\n",
     "    def __init__(self, x, y):\n",
     "        self.velocity = np.array([0,0])\n",
     "        self.position = np.array([x,y])\n",
-    "        self.vertex = get_circle_points(self,x,y)\n",
     "        \n",
-    "    def update_physics(self):\n",
-    "        new_v = np.add(self.velocity,g) #updates vel\n",
+    "    def update_physics(self,time_elapsed):\n",
+    "        \n",
+    "        new_v = np.add(self.velocity,np.multiply(g,time_elapsed)) #updates vel -> v = vo + at\n",
     "        if not is_over_limit(new_v): #limit\n",
     "                self.set_velocity(new_v)\n",
     "        \n",
     "        prev_pos = self.position\n",
-    "        new_pos = np.add(self.position,self.velocity) #update pos\n",
+    "        new_pos = np.add(self.position,np.multiply(self.velocity,time_elapsed)) #update pos -> x = xo + vt\n",
     "        self.set_position(new_pos)\n",
+    "            \n",
+    "        check_collisions(self)\n",
+    "        \n",
     "        out_screen(self,new_pos)\n",
     "        \n",
-    "        #update vertex\n",
-    "        for i in range(len(self.vertex)):\n",
-    "                self.vertex[i] =np.add(self.vertex[i],np.subtract(self.position,prev_pos))\n",
-    "            \n",
-    "\n",
+    "        \n",
+    "        \n",
     "    def set_velocity(self,new_vel):\n",
     "        self.velocity = new_vel\n",
     "    \n",
     "    def set_position(self,new_pos):\n",
     "        self.position = new_pos\n",
+    "        \n",
+    "    def get_vel_norm(self):\n",
+    "        return np.sqrt(self.velocity[0]**2 + self.velocity[1]**2)\n",
     "    \n",
     "    def to_string(self):\n",
     "        return f\"{self.position}-{self.velocity}\"\n",
     "\n",
-    "    \n",
-    "def get_circle_points(obj,x,y):\n",
-    "    points = []    \n",
-    "\n",
-    "    alfa = 0;\n",
-    "    for i in range(46):\n",
-    "        points.append([obj.position[0] + radius * np.cos(alfa), obj.position[1] + radius * np.sin(alfa)])    \n",
-    "        alfa += np.pi / 22.5; # 1 point each degree (in radians)\n",
-    "    return points\n",
     "\n",
     "\n",
     "def is_over_limit(v):\n",
@@ -84,16 +84,17 @@
     "# Process the new position on edges\n",
     "def out_screen(object,new_pos):\n",
     "    \n",
-    "    if new_pos[0] > (xmax - radius) or new_pos[0] < (xmin + radius):\n",
-    "        object.set_velocity(np.multiply(object.velocity,[-0.75,0.97]))\n",
-    "        if new_pos[0] > (xmax - radius): # DERECHA\n",
+    "    # LEFT AND RIGHT\n",
+    "    if new_pos[0] >= (xmax - radius) or new_pos[0] <= (xmin + radius):\n",
+    "        object.set_velocity(np.multiply(object.velocity,[-BOUNCE_CONST,SLIDE_CONST]))\n",
+    "        if new_pos[0] >= (xmax - radius): # RIGHT BORDER\n",
     "            object.set_position(np.add(new_pos,[(xmax - radius)-new_pos[0],0])) \n",
     "          \n",
-    "        if new_pos[0] < (xmin + radius): # IZQUIERDA\n",
+    "        if new_pos[0] <= (xmin - radius): # LEFT\n",
     "            object.set_position(np.add(new_pos,[(xmin + radius)-new_pos[0],0]))\n",
     "        \n",
-    "    if new_pos[1] > (ymax - radius) or new_pos[1] < (ymin + radius):\n",
-    "        object.set_velocity(np.multiply(object.velocity,[0.97,-0.75]))\n",
+    "    if new_pos[1] >= (ymax - radius) or new_pos[1] < (ymin + radius):\n",
+    "        object.set_velocity(np.multiply(object.velocity,[SLIDE_CONST,-BOUNCE_CONST]))\n",
     "        \n",
     "        #if new_pos[1] > (ymax - radius): # ARRIBA\n",
     "         #  new_pos = np.add(new_pos,[0,(ymax-radius)-new_pos[1]])          \n",
@@ -101,10 +102,42 @@
     "        if new_pos[1] < (ymin + radius): # ABAJO\n",
     "            object.set_position(np.add(new_pos,[0,(ymin+radius)-new_pos[1]]))\n",
     "\n",
+    "def check_collisions(obj):\n",
+    "    global objects\n",
+    "    \n",
+    "    for other in objects:\n",
+    "        #diff vect calc\n",
+    "        diff_vec = np.subtract(other.position,obj.position)\n",
+    "        norm_diff_vec = np.sqrt(diff_vec[0]**2 + diff_vec[1]**2)\n",
+    "        \n",
+    "        if norm_diff_vec <= 2*radius and other != obj:\n",
+    "            \n",
+    "            #Velocity calcs for volume collisions\n",
+    "            ratio_o1 = obj.get_vel_norm()/norm_diff_vec\n",
+    "            ratio_o2 = other.get_vel_norm()/norm_diff_vec\n",
+    "            inverse_diff_vec = np.multiply(diff_vec,-1)\n",
+    "            \n",
+    "            # Check angle\n",
+    "            if det(diff_vec,obj.velocity)>0:\n",
+    "                new_vec_obj = np.multiply(inverse_diff_vec,ratio_o2)\n",
+    "                new_vec_other = np.multiply(diff_vec,ratio_o1)\n",
+    "            else:\n",
+    "                new_vec_obj = np.multiply(diff_vec,ratio_o2)\n",
+    "                new_vec_other = np.multiply(inverse_diff_vec,ratio_o1)\n",
+    "            \n",
+    "            #UPDATES VEL\n",
+    "            obj.set_velocity(new_vec_obj)\n",
+    "            other.set_velocity(new_vec_other)\n",
+    "            \n",
+    "            #UPDATES POS\n",
+    "            dim_overlap = radius - norm_diff_vec/2\n",
+    "            obj.set_position(np.add(obj.position,dim_overlap))\n",
+    "            other.set_position(np.subtract(other.position,dim_overlap))\n",
     "            \n",
     "            \n",
-    "            \n",
-    "            \n",
+    "def det(v1,v2):\n",
+    "    return v1[0]*v2[1]-v2[0]*v1[1]\n",
+    "    \n",
     "# OPENGL FUNC\n",
     "\n",
     "def init():\n",
@@ -115,19 +148,15 @@
     "\n",
     "\n",
     "# updates all velocities and positions\n",
+    "#def update():\n",
     "def update():\n",
-    "    global objects\n",
-    "    \n",
-    "    t.sleep(0.009) #adds some retard\n",
+    "    global objects, begin\n",
     "\n",
     "    for object in objects:\n",
-    "        object.update_physics()\n",
+    "        object.update_physics((t.time_ns() - begin)/(10**9))\n",
+    "        \n",
     "    glutPostRedisplay()\n",
-    "    \n",
-    "    # print(\"UPDATE\")\n",
-    "    # for o in objects:\n",
-    "    # print(o.to_string())\n",
-    "    \n",
+    "    begin = t.time_ns()\n",
     "    \n",
     "# on left click creates a ball, on right one deletes all\n",
     "def mouse(button, state, x, y):\n",
@@ -147,23 +176,21 @@
     "    #cleans\n",
     "    glClearColor(0.0, 0.0, 0.0,1.0);\n",
     "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);\n",
-    "           \n",
-    "        \n",
+    "    \n",
+    "    glEnable(GL_POINT_SMOOTH)\n",
+    "    glPointSize(2*radius)\n",
     "    #draws all\n",
     "    for obj in objects:\n",
-    "        glBegin(GL_TRIANGLE_FAN)\n",
+    "        glBegin(GL_POINTS)\n",
     "        glVertex2fv(obj.position)\n",
-    "        for i in range(len(obj.vertex)):\n",
-    "            glVertex2fv(obj.vertex[i])\n",
     "        glEnd()\n",
-    "        \n",
-    "    glutSwapBuffers()\n",
+    "    \n",
+    "    glDisable(GL_POINT_SMOOTH)\n",
+    "    glFlush()\n",
     "\n",
-    "    \n",
-    "    \n",
     "glutInit(sys.argv)\n",
     "\n",
-    "glutInitDisplayMode(GLUT_DOUBLE | GLUT_RGB)\n",
+    "glutInitDisplayMode(GLUT_SINGLE | GLUT_RGB)\n",
     "# Atributos de la ventana\n",
     "glutInitWindowPosition(950,200)\n",
     "glutInitWindowSize(width,height)\n",
@@ -174,9 +201,15 @@
     "glutDisplayFunc(draw)\n",
     "glutMouseFunc(mouse)\n",
     "glutIdleFunc(update)\n",
-    "#glutPassiveMotionFunc(cursor)\n",
     "glutMainLoop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
